# claude-ui

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  hello.py  pyproject.toml  run.py  test_server.py
claude_ui/: cli.py  config.py  main.py  views.py
claude_ui/api/: instances.py  mcp_servers.py  projects.py  sessions.py  websocket.py  worktrees.py
claude_ui/core/: database.py
claude_ui/models/: database.py  schemas.py
claude_ui/services/: __init__.py  claude_manager.py  cleanup.py  git_manager.py  instance_service.py  mcp_service.py  project_service.py  session_service.py  worktree_service.py
templates/: base.html
templates/forms/: new_instance.html  new_project.html
templates/pages/: dashboard.html  instance_chat.html  instances.html  mcp.html  projects.html
